fix: debug jagged and outline gap on mobile

--- a/src/components/home/SlideSection.scss
+++ b/src/components/home/SlideSection.scss
@@ -6,6 +6,10 @@
   background-color: $color-white;
   overflow: hidden;
 
+  @media (max-width: $phone) {
+    margin: 10vw 0;
+  }
+
   &__items {
     position: absolute;
     top: 40%;
@@ -25,6 +29,8 @@
     display: block;
     transition: transform 0.6s ease-out;
     backface-visibility: hidden;
+    overflow: hidden;
+    outline: 2px solid $color-gray-dark-1;
 
     &:hover > .slide__play::before {
       opacity: 0.8;
@@ -38,12 +44,10 @@
   }
 
   &__item {
-    height: 100%;
-    width: 100%;
+    height: 105%;
+    width: 105%;
     object-fit: cover;
-    cursor: pointer;
     backface-visibility: hidden;
-    outline: 2px solid $color-gray-dark-1;
   }
 
   &__play {
@@ -52,12 +56,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 5vw;
-    z-index: inherit;
+    z-index: 10;
 
     &button {
       width: 5vw;
       opacity: 0.8;
-      transform: translateX(6px);
+      transform: translateX(0.4vw);
     }
 
     &::before {
@@ -70,8 +74,8 @@
       width: 7vw;
       border-radius: 50%;
       border: 5px solid transparent;
-      border-top: 5px solid $color-white;
-      border-bottom: 5px solid $color-white;
+      border-top: 0.5vw solid $color-white;
+      border-bottom: 0.5vw solid $color-white;
       opacity: 0;
       visibility: hidden;
       transition: opacity 0.2s ease;
@@ -96,19 +100,19 @@
 
   &__prev {
     left: -35%;
-    transform: translate(0, -50%);
+    transform: translate3d(0, -50%, 200px);
 
     &:hover {
-      transform: translate(10px, -50%);
+      transform: translate3d(10px, -50%, 200px);
     }
   }
 
   &__next {
     right: -35%;
-    transform: translate(0, -50%);
+    transform: translate3d(0, -50%, 200px);
 
     &:hover {
-      transform: translate(-10px, -50%);
+      transform: translate3d(-10px, -50%, 200px);
     }
   }
 }
